[gd_scene load_steps=9 format=2]

[ext_resource path="res://in_game/ui/money.tres" type="DynamicFont" id=1]
[ext_resource path="res://in_game/ui/radar.tres" type="DynamicFont" id=2]
[ext_resource path="res://in_game/ui/common.tres" type="DynamicFont" id=3]
[ext_resource path="res://in_game/ui/sidebar.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.188235, 0.407843, 0.054902, 1 )

[sub_resource type="StyleBoxFlat" id=3]

[node name="Sidebar" type="Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -426.0
rect_min_size = Vector2( 426, 0 )
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SidebarContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Header" type="PanelContainer" parent="SidebarContainer"]
margin_right = 426.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="SidebarContainer/Header"]
margin_right = 426.0
margin_bottom = 40.0
custom_constants/margin_right = 0
custom_constants/margin_top = 8

[node name="Money" type="Label" parent="SidebarContainer/Header/MarginContainer"]
margin_top = 8.0
margin_right = 426.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 32 )
custom_fonts/font = ExtResource( 1 )
text = "12000"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="SidebarContainer/Header"]
margin_right = 426.0
margin_bottom = 40.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4

[node name="Button" type="Button" parent="SidebarContainer/Header/MarginContainer2"]
margin_left = 382.0
margin_top = 4.0
margin_right = 422.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
size_flags_horizontal = 8
enabled_focus_mode = 0

[node name="Radar" type="Panel" parent="SidebarContainer"]
margin_top = 44.0
margin_right = 426.0
margin_bottom = 470.0
rect_min_size = Vector2( 0, 426 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="SidebarContainer/Radar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "RADAR"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tools" type="HBoxContainer" parent="SidebarContainer"]
margin_top = 474.0
margin_right = 426.0
margin_bottom = 538.0
rect_min_size = Vector2( 0, 64 )
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RepairButton" type="Button" parent="SidebarContainer/Tools"]
margin_left = 89.0
margin_right = 153.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
text = "Repair"

[node name="SellMargin" type="MarginContainer" parent="SidebarContainer/Tools"]
margin_left = 157.0
margin_right = 269.0
margin_bottom = 64.0
custom_constants/margin_right = 24
custom_constants/margin_left = 24
__meta__ = {
"_edit_lock_": true
}

[node name="SellButton" type="Button" parent="SidebarContainer/Tools/SellMargin"]
margin_left = 24.0
margin_right = 88.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
text = "Sell"

[node name="ToggleRadarButton" type="Button" parent="SidebarContainer/Tools"]
margin_left = 273.0
margin_right = 337.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 0 )
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
text = "Radar"

[node name="PowerAndProductionMargin" type="MarginContainer" parent="SidebarContainer"]
margin_top = 542.0
margin_right = 426.0
margin_bottom = 954.0
size_flags_vertical = 3
custom_constants/margin_right = 4
__meta__ = {
"_edit_lock_": true
}

[node name="PowerAndProduction" type="HBoxContainer" parent="SidebarContainer/PowerAndProductionMargin"]
margin_right = 422.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
__meta__ = {
"_edit_lock_": true
}

[node name="PowerMeter" type="Panel" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction"]
margin_right = 24.0
margin_bottom = 412.0
grow_vertical = 2
rect_min_size = Vector2( 24, 0 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Production" type="VBoxContainer" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction"]
margin_left = 28.0
margin_right = 422.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="ProductionTabs" type="HBoxContainer" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production"]
visible = false
margin_right = 394.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Buildings" type="Panel" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionTabs"]
margin_right = 95.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="Infantry" type="Panel" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionTabs"]
margin_left = 99.0
margin_right = 194.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="Vehicles" type="Panel" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionTabs"]
margin_left = 198.0
margin_right = 293.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="Weapons" type="Panel" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionTabs"]
margin_left = 297.0
margin_right = 394.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="ProductionCameos" type="GridContainer" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production"]
margin_right = 394.0
margin_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Building" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_right = 128.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building2" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building3" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building4" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_top = 104.0
margin_right = 128.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building5" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_left = 132.0
margin_top = 104.0
margin_right = 260.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building6" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_left = 264.0
margin_top = 104.0
margin_right = 392.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building12" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_top = 208.0
margin_right = 128.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building11" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_left = 132.0
margin_top = 208.0
margin_right = 260.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building10" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_left = 264.0
margin_top = 208.0
margin_right = 392.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building9" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_top = 312.0
margin_right = 128.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building8" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_left = 132.0
margin_top = 312.0
margin_right = 260.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0

[node name="Building7" type="Button" parent="SidebarContainer/PowerAndProductionMargin/PowerAndProduction/Production/ProductionCameos"]
margin_left = 264.0
margin_top = 312.0
margin_right = 392.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 100 )
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
